<resources>
    <string name="app_name">MobilePad</string>
    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!-- Activities -->
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_connections">Connections</string>
    <string name="content_description_image">Connection image</string>

    <!-- Strings related to login -->
    <string name="prompt_username_email">Username/e-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">No account? Register</string>
    <string name="enter_password">Enter password</string>
    <string name="password_is_incorrect">Password is incorrect</string>
    <string name="enter_username_or_email">Enter username or email</string>
    <string name="enter_username">Enter username</string>
    <string name="username_not_exists">User doesn\'t exists</string>
    <string name="user_email_not_exists">User with this email not exists</string>

    <!-- Sign up dialog -->
    <string name="signup_dialog_title">Create new user</string>
    <string name="signup_prompt_username">Username</string>
    <string name="signup_prompt_email">e-mail</string>
    <string name="signup_dialog_OK">OK</string>
    <string name="signup_dialog_Cancel">Cancel</string>
    <string name="signup_error_existing_email">Profile with this email already registered</string>
    <string name="signup_error_existing_username">This username is already chosen. Pick another one</string>
    <string name="signup_error_unknown_error">A problem occurred while registering your account</string>
    <string name="signup_error_enter_email">Enter email</string>
    <string name="signup_error_wrong_email">Enter valid email</string>
    <string name="signup_error_password_too_short">Password is too short</string>
    <string name="signup_registration_success">Your account is ready</string>

    <!-- Settings -->
    <string name="settings_title_general">General</string>
    <string name="settings_title_theme">Theme</string>
    <string name="settings_title_misc">Misc</string>

    <string-array name="settings_theme_elements">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="settings_theme_default">Light</string>
    <string name="settings_general_profile_name">Profile Name</string>
    <string name="settings_general_password">Password</string>
    <string name="settings_misc_update">Update</string>
    <string name="settings_misc_sound">Sound</string>

    <string name="settings_general_profile_name_hint"> </string>
    <string name="settings_general_password_hint"> </string>
    <string name="settings_misc_update_hint"> </string>
    <string name="settings_misc_sound_hint"> </string>

    <!-- Add host dialog -->
    <string name="add_host_dialog_title">Enter host:</string>
    <string name="add_host_dialog_OK">OK</string>
    <string name="add_host_dialog_Cancel">Cancel</string>

    <!-- Main activity -->
    <string name="msg_missing_functionality">This functionality will be added later.</string>
    <string name="choose_preset_layout">Choose preset layout</string>
    <string name="connect_to_host">Connect to host</string>
    <string name="settings">Settings</string>
    <string name="press_back_to_quit">Press \'Back\' again to quit.</string>
    <string name="connecting_to">Connecting to</string>
    <string name="connecting_error">Error connecting to host</string>
    <string name="disconnected">Disconnected</string>

</resources>
