<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <EditText
        android:id="@+id/dialog_signup_name"
        android:inputType="text"
        android:hint="@string/signup_prompt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/dialog_signup_email"
        android:inputType="textEmailAddress"
        android:hint="@string/signup_prompt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/dialog_signup_password"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>

</LinearLayout>